json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,65 @@
 {
  "items": [
   {
+    "id": "Ba0bDcHiSPCTAxzzcpK7mA",
+    "url": "https://stackoverflow.com/jobs/156138/ios-developer-senior-remote-topdevz?a=QmyBSWTEfII",
+    "title": "iOS Developer (Senior, Remote) at TopDevz  ",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/16",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/16",
+      "DBG_TECH1:k/t/w:ios/mobile/16",
+      "DBG_TECH1:k/t/w:objective-c/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/c/4",
+      "DBG_TECH1:k/t/w:objective-c/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=4, mobile=32, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=54, java=0, gamedev=8, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TITLE1/dev",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones"
+    ],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "TopDevz",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 30, 2019 3:06:25 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "crawled": "Jun 30, 2019 3:06:25 AM",
+    "content": "<h2><span>iOS Developer (Senior, Remote)</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Contract</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Agile Software Development</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>51-200 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>    <h3>Reactions to this job</h3>    <div>        <div>                                                        <span>3</span>                                                                        <span>2</span>                                                                        <span>1</span>                                                                        <span>0</span>                                                                        <span>0</span>                                                                        <span>0</span>                        </div>    </div>        <div>            <div>                <div>                    <div></div>                </div>                <div>                    <strong>New!</strong> How do you feel about this job listing?                </div>                <div>                                    </div>            </div>        </div>        <div></div></div><div>Company: TopDevz | No office location<br></div><h3>Technologies</h3><div></div><div>ios</div><div>ios-sdk</div><div>apple-ios</div><div>objective-c</div><div>cocoa-touch</div>                <h3>Job description</h3>                <div><p>We are looking for an experienced, senior,&nbsp;<strong>iOS&nbsp;Developer</strong>&nbsp;who is excited to work on one of our many client projects - both greenfield (new) projects as well as legacy (support) projects in that technology stack. &nbsp;This is a remote position.</p><p><strong>Skills &amp; Requirements</strong></p><p>The following skills are required:</p><ol><li>Very experienced (5+ Years) in <strong>Software development</strong>.</li><li>Very experienced (5+ years) in&nbsp;<strong>iOS development</strong>.</li><li>A deep familiarity with Objective-C and Cocoa Touch.</li><li>Experience working with iOS frameworks such as Core Data, Core Animation, Core Graphics and Core Text.</li><li>Experience with third-party libraries and APIs.</li><li>Working knowledge of the general mobile landscape, architectures, trends, and emerging technologies.</li><li>Solid understanding of the full mobile development life cycle.</li><li>Knowledge of a typical development lifecycle (development to deployment) using typical industry tools, e.g. Atlassian JIRA and BitBucket.</li><li>Good written and verbal communication skills.</li><li>Significant attention to detail when writing documentation, including good&nbsp;design and user&nbsp;documentation skills.</li></ol>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/156138?reset=False&amp;ra=QmyBSWTEfII&amp;oqs=a%3DQmyBSWTEfII' rel='nofollow'>Apply now</a></div><div>                                                                                                                                                            </div>            <h3>About TopDevz</h3>            <div><p>TopDevz is a boutique software development consulting agency. We place major focus on not just delivering excellent value and top-notch software to our clients, but also the happiness of our team. We are providing a friendly, remote work environment as well as a suite of interesting and challenging projects to work on.</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Live and Work from anywhere in USA or Canada</span>                            </li>                            <li>                                <span></span>                                <span>Competitive Compensation</span>                            </li>                            <li>                                <span></span>                                <span>Friendly Work Environment</span>                            </li>                            <li>                                <span></span>                                <span>Interesting and Challenging Projects</span>                            </li>                            <li>                                <span></span>                                <span>Incredible Colleagues</span>                            </li>                            <li>                                <span></span>                                <span>Project Variety and Industry</span>                            </li>                            <li>                                <span></span>                                <span>See your family more by working remotely</span>                            </li>                            <li>                                <span></span>                                <span>No commute</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "851k7Tx0R-KyAc4mLPepJA",
     "url": "https://stackoverflow.com/jobs/276716/senior-ios-developer-neybox-digital?a=1uNIKvCk9BHa",
     "title": "Senior iOS Developer at Neybox Digital  ",
