json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,114 @@
 {
  "items": [
   {
+    "id": "zLq_-xyJRrm3ubqfdj1CEA",
+    "url": "https://stackoverflow.com/jobs/284847/cordova-music-plugin-to-play-music-on-the-lock-choones?a=1xwMTBR7StQk",
+    "title": "Cordova Music Plugin to play music on the lock screen. at Choones!  ",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:android/java/3",
+      "DBG_TECH1:k/t/w:android/mobile/6",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:java/java/4",
+      "DBG_TECH1:k/t/w:java/mobile/2",
+      "DBG_TECH1:k/t/w:javascript/frontend/2",
+      "DBG_TECH1:k/t/w:javascript/nodejs/2",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=30, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=16, java=7, gamedev=0, php=0, embedded=0, frontend=2}",
+      "REMOTE1/100",
+      "TECH1/mobile",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Choones!",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2019 12:06:25 PM",
+    "validThrough": "Aug 3, 2019 12:06:25 PM",
+    "crawled": "Jul 27, 2019 12:06:25 PM",
+    "content": "<h2><span>Cordova Music Plugin to play music on the lock screen.</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Contract</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Desktop Applications, Mobile Application, Music</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>1–10 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Choones! | No office location<br></div>                    <h3>Remote details</h3>                    <div>                        <div>                                                            <div>                                    <span>Preferred Timezone:</span>                                    <span>(GMT+00:00) London +/- 4 hours</span>                                </div>                                                                                                            </div>                    </div>                <h3>Technologies</h3><div></div><div>swift</div><div>cordova</div><div>android</div><div>java</div><div>javascript</div>                <h3>Job description</h3>                <div><p>Project Name: <strong>Cordova Music Plugi</strong></p><p>Deadline: <strong>1 to 2 Weeks</strong></p><p>Languages: <strong>Swift for iOS, Java for Android, Javascript for Cordova</strong></p><p>Summary: Create a Music Plugin for Cordova that enables music playlists to be played when the source app is in the background, or the phone is locked. </p><p><strong>Feature List</strong></p><p>- Audio should play when device is on silent.</p><p>- Audio should play when app is in background.</p><p>- Audio should play when phone is locked.</p><p>- Audio should play for single item or playlist.</p><p>- Should get track duration.</p><p>- Should get track position (progress)</p><p>- Should support play, pause and seek</p><p>- Should support streaming URLs</p><p>- Media controls should display when phone is locked</p><p>- Album art should display in media controls</p><p>- Compatible with iOS and Android</p><p><strong>Similar existing solutions</strong></p><p>The closest similar solution we have found so far:</p><p><a href='https://github.com/Rolamix/cordova-plugin-playlist#readme' rel='nofollow'>https://github.com/Rolamix/cordova-plugin-playlist#readme</a></p><p>Bugs with this plugin:</p><p>- no album art on iOS media controls,</p><p>- track duration not calculated,</p><p>- audio starts and the sends status 'paused', with track no progress.</p>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/284847?reset=False&amp;ra=1xwMTBR7StQk&amp;oqs=a%3D1xwMTBR7StQk' rel='nofollow'>Apply now</a></div><div>                                                                                                                                                            </div>                    <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Work remotely</span>                            </li>                            <li>                                <span></span>                                <span>Good communication systems</span>                            </li>                            <li>                                <span></span>                                <span>Liaise with other developers in the team</span>                            </li>                            <li>                                <span></span>                                <span>Fun and exciting project</span>                            </li>                            <li>                                <span></span>                                <span>Paid Holidays</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "cM1tpzohTfiFRBbKYoHQRA",
+    "url": "https://jobmote.com/job/52544/sap-abap-consultant-1-week-on-site-balance-remote/",
+    "title": "SAP ABAP Consultant (1 week on-site balance remote)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``can 2W remot",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "VedAlgo, Inc",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 26, 2019 10:07:21 PM",
+    "validThrough": "Jul 29, 2019 10:07:21 PM",
+    "crawled": "Jul 27, 2019 3:06:25 AM",
+    "content": "<div><p> <strong>Position : SAP ABAP Consultant (1 week on-site balance remote)</strong></p> <p> <strong>Location : Tacoma, WA</strong></p> <p> <strong>Start : 08/12/19</strong></p> <p> <strong>End date: 10/04/19</strong></p> <p>1 week on site then can work remote for balance of engagement</p> <p> <strong> Statement of Work</strong></p> <p>Client is seeking an SAP ABAP consultant with expert knowledge on latest coding standards of ABAP and with functional knowledge on SAP FICA module. The developer should be able to understand functional aspects of FICA module and come up with technical solutions for them. The developer should have knowledge on Adobe forms as the report output will be using Adobe forms. Also, the developer should have knowledge on web services preferably SAP PI/PO web services. Client is running SAP ECC 6.08 Suite on HANA. We are looking for an ABAP consultant with good experience who can ramp up quickly on our standards, understand our functional requirements and deliver quality work. The consultant will be working with our functional resources who will be creating functional requirements documents and then testing the development work. The consultant will be responsible to complete the developments as per our recommended best practices and standards, and deliver as per the committed deadlines. </p> <p>The consultant will be working onsite for 1 week. After that, they can work remotely. </p> <p> </p> <p> <strong> Deliverables</strong></p> <ol><li>Complete the development as per our best practice and standards. </li></ol><p>2.Unit test the developments to find and fix any bugs before handing over to the analysts for actual </p> <p>testing. </p> <ol><li>Create clear technical documents with all the logic and methodologies used. </li> <li>Knowledge transfer to the Client IT team. </li></ol> - provided by Dice</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "fiU1uGzCSSuYNAuN_p1J1Q",
     "url": "https://jobmote.com/job/52456/identity-management-engineer-remote/",
     "title": "Identity Management Engineer / Remote",
@@ -11604,59 +11712,6 @@
     "validThrough": "Jun 4, 2019 4:47:39 PM",
     "crawled": "May 28, 2019 5:08:25 PM",
     "content": "<h2>Inpatient Coding Specialist at <span>Health Information Associates - HIA</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Remote </strong></p><p><strong>Job Locations: US-Remote Office</strong></p><p><strong>ID: </strong>2015-1011</p><p><strong>Category: </strong>Coding</p><p><strong>Overview</strong></p><p>Codes all requested Inpatient medical records using the most accurate and appropriate ICD-10-CM/PCS, CPT codes and DRG assignment in accordance with regulatory coding guidelines, best practices in the industry and HIA policy and procedures. Abstract key data required from the medical information consistent with UHDDS requirements, other regulatory and best practices. The coder will meet specified productivity and accuracy standards.</p><p>PM17</p><p><strong>Responsibilities</strong></p><ul><li>Codes all requested Inpatient acute care records using the most accurate and appropriate ICD-10-CM/PCS, DRG assignment in accordance with coding guidelines.</li><li>Abstracts, codes and assigns necessary demographic and clinical data elements required</li><li>Uses 3M and/or TruCode encoder to ensure appropriate reimbursement and accurate DRG &amp; MSDRG assignment.</li><li>Writes appropriate, non-leading queries.</li><li>Maintains quality and productivity according to client requirements.</li><li>Completes all I-10 education as required within established deadlines.</li><li>Commits to continually improving his/her coding skills by actively participating in all education sessions.</li><li>Reports to the Coding Services Manager.</li></ul><p><strong>Qualifications</strong></p><ul><li><strong>RHIA, RHIT, and CCS</strong></li><li>Minimum 3 years inpatient coding experience in an acute care facility.</li><li>I-10-CM/PCS proficient</li><li>Computer proficiency, able to research coding questions and utilize HIA’s internal educational resources.</li><li>High-Speed Internet via Cable (no Satellite or wireless cell based)</li><li><strong>Independent, focused individual able to work remotely.</strong></li></ul>        </div><div>        <a href='https://careers-hiacode.icims.com/jobs/1011/remote-inpatient-coding-specialist/job' rel='nofollow'>Apply for job</a>    </div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "DEfE6KEFQSucN5QWh1qkWg",
-    "url": "https://remote.co/job/human-resources-investigator/",
-    "title": "Human Resources Investigator",
-    "tags": [
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
-      "DBG:surround``OR(work,countri,locat,contract,base,you W can) 2W anywher",
-      "DBG:surround``can 2W remot",
-      "DBG_TECH1:k/t/w:less/frontend/5",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
-      "REMOTE1/100",
-      "TECH1/frontend",
-      "TITLE1/unknown",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "frontend"
-    ],
-    "hiringOrganization": {
-      "name": "Talent Table",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "May 27, 2019 3:35:24 PM",
-    "validThrough": "Jun 3, 2019 3:35:24 PM",
-    "crawled": "May 27, 2019 4:07:34 PM",
-    "content": "<h2>Human Resources Investigator at <span>Talent Table</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <p>Location: <strong>OTHER – Remote</strong></p><p>Talent Table has an opening for a <strong>6-month</strong> contract <strong>HR Investigator</strong> located <strong>remotely</strong> for our client – a Fortune 100 Global Tech company. You must be in the US and authorized to work without sponsorship. No H1Bs.</p><p><strong>Description:</strong></p><p>Sr. HR Professional who will conduct workplace investigations The successful candidate will join a team focused on our client’s commitment to compliance and integrity and maintaining a high ethical standard for business operations and employee treatment. The position will focus on resolving employee concerns in the workplace equitably and participate in maintaining a work environment that provides fair and consistent treatment to all employees in adherence to the company’s policies as well as employment laws.</p><p><strong>Position Location: Anywhere in the US and can work remotely<br>Travel: will be 10% or less</strong></p><p><strong>Responsibilities:</strong></p><ul><li>Conduct high quality workplace investigations following established guidelines and best practices in response to complaints or allegations.</li><li>Develop investigation plan; interview witnesses, including employees at all levels of the organization; gather and review supporting records, files and documents; provide highly complex analysis; conduct credibility assessments; reach a sound and reasoned conclusion; prepare written investigation documents, including closure memos; provide appropriate recommendations.</li><li>Partner with others within the company to ensure timely, effective and efficient resolution of HR issues.</li><li>Work with a wide range of internal and external parties to evaluate situations and determine necessary steps to be taken.</li><li>Maintain expert knowledge of the company’s HR policies and procedures as well as US employment laws and regulations.</li><li>Maintain confidentiality, discretion, professionalism and integrity.</li></ul><p><strong>Candidate Profile:</strong></p><ul><li>5 or more years of experience performing duties similar to those outlined above; with advanced proficiency in conducting investigations; including complex issues regarding discrimination and harassment and</li><li>3 or more years of general Human Resources experience and</li><li>Advanced knowledge of current US – Federal and State laws and regulations pertaining to employment</li><li>Ability to successfully manage multiple priorities in a complex fast paced environment.</li><li>Must be self-directed and able to work independently as well as in a team environment.</li><li>Experience partnering with legal resources to resolve employee relations issues</li><li>Demonstrated problem solving and judgment skills with the ability to provide high quality independent analysis, conclusions and recommendations</li><li>Experience preparing and delivering information in a concise, professionally written format</li><li>Excellent communications skills; specifically diplomacy and patience when communicating with others and diffusing difficult situations</li><li>Strong interpersonal skills; especially, verbal communication, listening and problem solving</li><li>Experience working with executives and key business stakeholders.</li><li>Experience working in a large global corporation is preferred</li><li><strong>Bachelor’s degree</strong></li><li><strong>Ability to travel as required</strong></li></ul>        </div><div>        <a href='https://chu.tbe.taleo.net/chu03/ats/careers/v2/viewRequisition?org=TWENTYONETECH&amp;cws=49&amp;rid=3019' rel='nofollow'>Apply for job</a>    </div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
