--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -430,7 +430,7 @@
       mailGroupWeek: 10495360
 
     - !jobnav
-      title: Remote Product, Parketing and SEO jobs
+      title: Remote Product, Marketing and SEO jobs
       home_title: Product, Marketing and SEO jobs
       tagline: "Remote Product Managers, Product Designers, Content Marketing and
       Search Engine Optimization(SEO) specialists"
