--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -341,8 +341,10 @@
       Administrators, Business Intelligence specialists'
       img: 'fa fa-3x pull-left fa-database'
       undertagline: "<strong>Includes:</strong> MySQL/PostgreSQL/Oracle/Microsoft SQL Server/
-      Amazon Redshift Database Developers and Administrators, Database Automation Engineers,
-      Business Intelligence specialists, Exadata/Teradata/Informix/Sybase Engineers, DB2 Engineers"
+      Amazon Redshift Database Developers and Administrators (DBA), PL/SQL Developers, Database
+      Automation Engineers, Business Intelligence specialists,
+      Exadata/Teradata/Informix/Sybase Engineers, DB2 Engineers,
+      MongoDB Database Administrators"
       description: 'Browse 100% remote DBMS Developer and DBA jobs.
       Find your next remote DBMS job today, on remote4me!'
       url: /remote-dbms-developer-admin-dba-jobs
@@ -400,9 +402,10 @@
       tagline: "Remote Support Engineers, Support Technicians, Support agents, Helpdesk and
       Administrative Assistants"
       img: 'fa fa-3x pull-left fa-support1'
-      undertagline: "<strong>Includes:</strong> Remote Support Technicians, Support Engineers,
-      Support agents, Accounts Support, Customer Support, Customer Success, Customer Operations,
+      undertagline: "<strong>Includes:</strong> Remote Support Technicians, Remote Support
+      Engineers, Support agents, Accounts Support, Customer Support, Customer Success, Customer Operations,
       Client Support, Client Success, Helpdesk, Service Desk, Field Service, Telephonic Case Managers,
+      Fraud Prevention Representatives,
       Administrative Assistants, Executive Administrators, Executive Support, Operations Associate"
       description: 'Browse 100% remote Support and Administrative Assistant jobs.
       Find your next remote Support job today, on remote4me!'
@@ -505,7 +508,7 @@
       img: 'fa fa-3x pull-left fa-noun_accounting_2000402_v2'
       img_style: 'width: 0.8em;'
       undertagline: "<strong>Includes:</strong> Remote Accountants, Bookkeepers, Finance
-      specialists, Order Management and Audit specialists"
+      specialists, Order Management, Accounts Receivable and Audit specialists"
       description: 'Browse 100% remote Accountant/Bookkeeper/Finance/Audit jobs.
       Find your next remote Finance job today, on remote4me!'
       url: /remote-finance-and-accounting-jobs
