json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,56 @@
 {
  "items": [
   {
+    "id": "22xZOG_NR5-Tl_qk14B6RA",
+    "url": "https://news.ycombinator.com/item?id=20586186",
+    "title": "Auth0 (https://auth0.com/) | Seattle - Buenos Aires - London - Sydney - Tokyo - Remote | Full ...",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 1, 2019 7:30:27 PM",
+    "validThrough": "Aug 8, 2019 7:30:27 PM",
+    "crawled": "Aug 1, 2019 9:32:11 PM",
+    "content": "Auth0 (<a href='https://auth0.com/' rel='nofollow'>https://auth0.com/</a>) | Seattle - Buenos Aires - London - Sydney - Tokyo - Remote | Full-time | EngineeringAuth0 is a Series E/435 employee company with major growth plans for 2019. Our vision is to provide the simplest and most secure identity platform for developers, to make the internet safer. Ultimately, we strive for an internet with fewer passwords. We're looking for people to join us on this journey.<p>Open jobs:</p><p>Senior Full Stack Engineer, Dashboard :<a href='https://jobs.lever.co/auth0/0aaa432d-2ec2-4326-b5c2-7a728ee3d5cf?lever-origin=applied&amp;lever-source%5B%5D=HackerNews' rel='nofollow'>https://jobs.lever.co/auth0/0aaa432d-2ec2-4326-b5c2-7a728ee3...</a></p><p>Backend Engineer: <a href='https://jobs.lever.co/auth0/38b3a1b2-a60e-4ce0-966f-2a3d9950ef23?lever-origin=applied&amp;lever-source%5B%5D=Hacker%20News' rel='nofollow'>https://jobs.lever.co/auth0/38b3a1b2-a60e-4ce0-966f-2a3d9950...</a></p><p>Cloud Security Engineer: <a href='https://jobs.lever.co/auth0/78bfae54-5dbd-4ff4-a208-3ba2efb2cd61?lever-origin=applied&amp;lever-source%5B%5D=Hacker%20News' rel='nofollow'>https://jobs.lever.co/auth0/78bfae54-5dbd-4ff4-a208-3ba2efb2...</a></p><p>Senior Software Engineer, Users Directory: <a href='https://jobs.lever.co/auth0/90483251-ce4e-4129-9682-ce46482508f3?lever-origin=applied&amp;lever-source%5B%5D=Hacker%20News' rel='nofollow'>https://jobs.lever.co/auth0/90483251-ce4e-4129-9682-ce464825...</a></p><p>Senior Full Stack Software Engineer: <a href='https://jobs.lever.co/auth0/f2a6fd71-f536-4aee-8cd1-76d96a04f894?lever-origin=applied&amp;lever-source%5B%5D=HackerNews' rel='nofollow'>https://jobs.lever.co/auth0/f2a6fd71-f536-4aee-8cd1-76d96a04...</a></p><p>Senior Software Engineer, Extensibility: <a href='https://jobs.lever.co/auth0/5b1087bc-7c36-4d1a-9057-5bcb1ca19daf?lever-origin=applied&amp;lever-source%5B%5D=Hacker%20News' rel='nofollow'>https://jobs.lever.co/auth0/5b1087bc-7c36-4d1a-9057-5bcb1ca1...</a></p><p>iOS Developer Experience Engineer, SDKs: <a href='https://jobs.lever.co/auth0/8878c2f6-0928-4cad-8032-718caef43c10?lever-origin=applied&amp;lever-source%5B%5D=HackerNews' rel='nofollow'>https://jobs.lever.co/auth0/8878c2f6-0928-4cad-8032-718caef4...</a></p><p>Our hiring process is documented here: <a href='https://auth0.com/blog/how-we-hire-engineers/' rel='nofollow'>https://auth0.com/blog/how-we-hire-engineers/</a></p><p>We are a remote-friendly company and every year we organize a company offsite. Below are some pictures from our 2018 offsite in Panama. We hope to see you at next year’s offsite!!:</p><p><a href='https://twitter.com/vibronet/status/997608152811044872' rel='nofollow'>https://twitter.com/vibronet/status/997608152811044872</a></p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "MoBiCzkyQFSE0Akewd3C8Q",
     "url": "https://news.ycombinator.com/item?id=20584363",
     "title": "Heads Up! party game for iPhone | iOS developer | Remote | US timezones Work on a game your ...",
